# walldo

./: .gitignore  README.md  Taskfile.yaml  Walldo.py  app.py  config.yaml  dmg.json  environment.yml  icon.icns  package-lock.json  pyproject.toml  setup.py  walldo.json
Applications/Walldo.app/Contents/: Info.plist
Walldo.app/Contents/: Info.plist
Walldo.app/Contents/MacOS/: libbz2.dylib  libcrypto.3.dylib  libexpat.1.dylib  libffi.8.dylib  liblzma.5.dylib  libncurses.6.dylib  libreadline.8.dylib  libssl.3.dylib  libtinfo.6.dylib  libz.1.dylib
Walldo.app/Contents/Resources/: Icons.icns
deploy/: __main__.py
urge/conda-meta/: bzip2-1.0.8-h93a5062_5.json  ca-certificates-2023.11.17-hf0a4a13_0.json  history  libexpat-2.5.0-hb7217d7_1.json  libffi-3.4.2-h3422bc3_5.json  libsqlite-3.44.1-h091b4b1_0.json  libzlib-1.2.13-h53f4e23_5.json  ncurses-6.4-h463b476_2.json  openssl-3.1.4-h0d3ecfb_0.json  pip-23.3.1-pyhd8ed1ab_0.json  python-3.11.6-h47c9636_0_cpython.json  readline-8.2-h92ec313_1.json  setuptools-68.2.2-pyhd8ed1ab_0.json  tk-8.6.13-h5083fa2_1.json  tzdata-2023c-h71feb2d_0.json  wheel-0.41.3-pyhd8ed1ab_0.json  xz-5.2.6-h57fd34a_0.json
walldo/: __init__.py  cli.py  config.py
walldo/api/: artwork.py  client.py  models.py
walldo/core/: macos.py  manager.py  models.py  scheduler.py  timer.py
walldo/ui/: app.py  models.py
walldo/ui/menu/: categories.py  (+4 more)
wallies/: __init__.py  config.py
wallies/api/: artwork.py  client.py  models.py
wallies/core/: macos.py  manager.py  models.py  scheduler.py  string.py  thread.py
wallies/ui/: app.py  models.py
(+161 files in other folders)
